# glassthought-sandbox

./: .gitignore  .gitmodules  App.jsx  ColorSelectorNode.jsx  Dockerfile  ImgNode.jsx  Jenkinsfile.sample  PLAN.md  README.md  _check_plugins.sh  _configure-jenkins-home.sh  _configure-jenkins-home.sudo-portion.sh  _env_setup_source_me.sh  _env_variables_source_me.sh  _password.sh  _try_to_clone_using_jenkins_ssh_key.sh  admin-password.sh  approach_notes.md  clean-hard.sh  current_failure_in_jenkins_job.md  docker-compose.yml  first_run.sh  get_plugin_versions.sh  git.push.sh  hard-cleanup.sh  idea.sh  index.html  install-jenkins.sh  install-plugins.sh  intellij.open-main-app-file.sh  intellij.open-main-file.sh  jenkins-casc.yaml  jest.config.js  nodes-edges.js  notes.md  package-lock.json  package.json  plan.md  plugins.txt  prompt.md  (+22 more)
.cursor/rules/: bash.sh.mdc  cursor_rules.mdc  cursor_rules_location.mdc  instructions.kt.mdc  instructions.mdc
3d-graph-simple/: index.html
MyMultiplatformLibrary/: .gitignore  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
bash/: main.sh
basic-vr-demo/: index.html  open-browser.sh  package-lock.json  package.json
basic-vr-demo/src/: main.ts  style.css
build_system/some_dir/: example.sh
composeApp/: build.gradle.kts
cpp/: CMakeLists.txt  build.sh  hi_world.cpp
cpp/LibConsumer/: CMakeLists.txt  main.cpp
cpp/LibProducer/: CMakeLists.txt  adder.cpp  adder.h
cpp/cmake-options/: CMakeLists.txt  build.sh  hi_world.cpp  run.sh
cpp/dereferencing_variable_name/: CMakeLists.txt  configure_cmake.sh
cpp/function-in-cmake/: CMakeLists.txt  build_run.sh
cpp/hello-world/: CMakeLists.txt  build.sh  makefile  run.sh
cpp/trim/: CMakeLists.txt  clean_build_run.sh  main.cpp
data/test-data/: headings-and-paragraphs.md  simple-note-heading-focused.md  test-note-1.md
demo/: CLAUDE.md  build.sh  gradle.properties  run.sh  settings.gradle.kts
demo/.claude/: settings.local.json
demo/.prompts/: plan-expose-kt-to-js.md  result-summary.md  results.md
demo/composeApp/: README.md  build.gradle.kts  serve.sh
dir-with-files/: first_file  second_file  third file with spaces
doc/: creation-notes.md  how-to-run.md  original-readme.md
glassthought-sandbox/: CHANGELOG.md  CLAUDE.md  README.md  README_ORIGINAL.md  _install.sh  package-lock.json  package.json  release-install.sh
glassthought-sandbox/.claude/: settings.local.json
glassthought-sandbox/src/: extension.ts
gradleSandbox/: settings.gradle.kts
init.groovy.d/: create-thorg-job.groovy  init-security.groovy
iosApp/Configuration/: Config.xcconfig
iosApp/iosApp.xcodeproj/: project.pbxproj
javaSandbox/: settings.gradle.kts
javaSandbox/lib/: build.gradle.kts
json/: change_val.json  transact-items.json
kotlin-sandbox/: README.md
kotlin-sandbox/app/: build.gradle.kts
lib/: build.gradle.kts
main/: index.html  styles.css
my-3d-graph/: README.md  index.html  package-lock.json  package.json
my-3d-graph/public/: graphData.json
my-3d-graph/src/: graphTypes.ts  graphUtils.ts  main.ts  style.css
prompts/: full_task.md
public/: test.html
sample_building_kotlin_applications_multi_project-kotlin-dsl/: .gitignore  README  README.md  settings.gradle.kts
sample_building_kotlin_applications_multi_project-kotlin-dsl/app/: build.gradle.kts
sample_building_kotlin_applications_multi_project-kotlin-dsl/myKotlinMPLib/: README.md  (+1 more)
sample_composite_builds_basics-kotlin-dsl/: README
shell/: ddb_scan.sh  transact-write.sh  update_item_atomic_counter.sh
simplified_top_level_project/: .gitignore  build.gradle.kts  settings.gradle.kts
src/: graphUtils.ts  index.ts  main-new.ts  main.ts  test.html  utils.test.ts  utils.ts
troubleshoot/: check_plugins.sh  password.sh
vite-project/: MY_README.md  package.json
(+127 files in other folders)
